tests/analyze/too-many-args/analyze.snap
---
source: tests/analyze.rs
expression: output
---
error: Parameter count mismatch: expected 1, but found 2.
> 1 | def double = fun n {
      ^

